mediastack/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: mediastack
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7878
